added note for keys

--- a/docs/editor/shortcut.mdx
+++ b/docs/editor/shortcut.mdx
@@ -16,3 +16,5 @@ Here is a list of the actions, along with their corresponding shortcut keys and 
 | Copy Template         | **CMD + SHIFT + C**     | Copies the selected template to your clipboard.           |
 | Show/Hide Side Bar    | **CMD + B**             | Toggles the visibility of the side bar.                     |
 | Show/Hide Debug Panel | **CMD + SHIFT + M**     | Toggles the visibility of the debug panel for extra insight. |
+
+**Note:** For Mac users, the CMD key is used for these shortcuts. Non-Mac users (Windows and Linux) should use the CTRL key instead.
