--- a/docs/template-guide/network.mdx
+++ b/docs/template-guide/network.mdx
@@ -88,50 +88,46 @@ If a port is specified in the host, the user supplied port is ignored and the te
 
 ### Port
 
-Nuclei v2.9.15 adds a new field 'port' that can be specified seperately instead of doing something like
+Starting from Nuclei v2.9.15, a new field called `port` has been introduced in network templates. This field allows users to specify the port separately instead of including it in the host field.
 
+Previously, if you wanted to write a network template for an exploit targeting SSH, you would have to specify both the hostname and the port in the host field, like this:
 ```yaml
- # let's say we are writing a network template for xyz-ssh-exploit
-host:
-  - "{{Hostname}}
-  - "{{Hostname}}:22"
-```
-
-In above 'host' example we are sending two network requests i.e
-- first request is sent to **port** (if present) in input/target.
-- second request is sent to **22** port (i.e default ssh port)
-
-the reason behind doing so is giving users flexibility to run a network template on both default port and non-default port. Suppose a user already knowns that **ssh service** is running on non-default port of 2222 (after doing a port scan with service discovery). In this case users can simply run
-
-```console
-$ nuclei -u scanme.sh:2222 -id "xyz-ssh-exploit"
-```
-
-and nuclei will use '2222' instead of default port '22' and if user doesnot specifiy any port in input then '22' is used. But this maynot be straightforward to understand and generates warnings in logs (since one request is destined to fail).
-
-Another known issue with this design of writing network templates is request being sent to **unexpected ports**. Ex: a web service might be running on port 8443 and when user runs 
-
-```console
-$ nuclei -u scanme.sh:8443 
-```
-
-In this case "xyz-ssh-exploit" template will send one request to "scanme.sh:22" and another request to "scanme.sh:8443" which might return unexpected response and eventually error out. This is especially true in case of automations.
-
-Now, this can be avoided while keeping existing functionality by writing network templates in following fashion:
-
-```yaml
- # new xyz-ssh-exploit
 host:
   - "{{Hostname}}"
-Port: 22
+  - "{{Host}}:22"
 ```
-In above design functionality to run template on non-standard ports will exist except on default reserved ports of 80,443,8080,8443,8081,53 and even this can be customized by adding new field
+
+In the above example, two network requests are sent: one to the port specified in the input/target, and another to the default SSH port (22).
+
+The reason behind introducing the port field is to provide users with more flexibility when running network templates on both default and non-default ports. For example, if a user knows that the SSH service is running on a non-default port of 2222 (after performing a port scan with service discovery), they can simply run:
+
+```bash
+$ nuclei -u scanme.sh:2222 -id xyz-ssh-exploit
+```
+
+In this case, Nuclei will use port 2222 instead of the default port 22. If the user doesn't specify any port in the input, port 22 will be used by default. However, this approach may not be straightforward to understand and can generate warnings in logs since one request is expected to fail.
+
+Another issue with the previous design of writing network templates is that requests can be sent to unexpected ports. For example, if a web service is running on port 8443 and the user runs:
+
+```bash
+$ nuclei -u scanme.sh:8443
+```
+
+In this case, `xyz-ssh-exploit` template will send one request to `scanme.sh:22` and another request to `scanme.sh:8443`, which may return unexpected responses and eventually result in errors. This is particularly problematic in automation scenarios.
+
+To address these issues while maintaining the existing functionality, network templates can now be written in the following way:
+
+```yaml
+host:
+  - "{{Hostname}}"
+port: 22
+```
+In this new design, the functionality to run templates on non-standard ports will still exist, except for the default reserved ports (`80`, `443`, `8080`, `8443`, `8081`, `53`). Additionally, the list of default reserved ports can be customized by adding a new field called exclude-ports:
 
 ```yaml
 exclude-ports: 80,443
 ```
-when exclude-ports is used default **reserved ports** list is overwritten.
-
+When `exclude-ports` is used, the default reserved ports list will be overwritten. This means that if you want to run a network template on port `80`, you will have to explicitly specify it in the port field.
 
 #### Matchers / Extractor Parts
 
@@ -152,7 +148,7 @@ id: input-expressions-mongodb-detect
 
 info:
   name: Input Expression MongoDB Detection
-  author: pd-team
+  author: pdteam
   severity: info
   reference: https://github.com/orleven/Tentacle
 
@@ -161,6 +157,7 @@ tcp:
       - data: "{{hex_decode('3a000000a741000000000000d40700000000000061646d696e2e24636d640000000000ffffffff130000001069736d6173746572000100000000')}}"
     host:
       - "{{Hostname}}"
+    port: 27017
     read-size: 2048
     matchers:
       - type: word
