Fix line breaks for custom template environment variables

--- a/docs/getting-started/running.mdx
+++ b/docs/getting-started/running.mdx
@@ -155,19 +155,21 @@ To use this feature, users need to set the following environment variables:
 <Accordion title="For AWS Bucket" icon="pencil">
 
 ```bash
-export AWS_ACCESS_KEY=AKIAXXXXXXXX export AWS_SECRET_KEY=XXXXXX export
-  AWS_REGION=us-xxx-1 export AWS_TEMPLATE_BUCKET=aws_bucket_name
+export AWS_ACCESS_KEY=AKIAXXXXXXXX
+export AWS_SECRET_KEY=XXXXXX
+export AWS_REGION=us-xxx-1
+export AWS_TEMPLATE_BUCKET=aws_bucket_name
 ```
 
 </Accordion>
 <Accordion title="For Azure Blob Storage" icon="pencil">
 
 ```bash
-export AZURE_TENANT_ID=00000000-0000-0000-0000-000000000000 export
-  AZURE_CLIENT_ID=00000000-0000-0000-0000-000000000000 export
-  AZURE_CLIENT_SECRET=00000000-0000-0000-0000-000000000000 export
-  AZURE_SERVICE_URL=https://XXXXXXXXXX.blob.core.windows.net/ export
-  AZURE_CONTAINER_NAME=templates
+export AZURE_TENANT_ID=00000000-0000-0000-0000-000000000000
+export AZURE_CLIENT_ID=00000000-0000-0000-0000-000000000000
+export AZURE_CLIENT_SECRET=00000000-0000-0000-0000-000000000000
+export AZURE_SERVICE_URL=https://XXXXXXXXXX.blob.core.windows.net/
+export AZURE_CONTAINER_NAME=templates
 ```
 
 </Accordion>
