Docker usage documentation and links between them

--- a/docs/getting-started/install.mdx
+++ b/docs/getting-started/install.mdx
@@ -24,6 +24,8 @@ title: 'Install'
     ```bash
     docker pull projectdiscovery/nuclei:latest
     ```
+
+    Docker-specific usage instructions can be found [here](./running#running-with-docker).
   </Tab>
   <Tab title="Github">
     ```bash
