move docs to 'js-proto-docs' repo

--- a/docs/template-guide/javascript.mdx
+++ b/docs/template-guide/javascript.mdx
@@ -55,7 +55,7 @@ This does not break any nuclei design principle nor does it change how nuclei wo
 
 ## API Reference
 
-API reference of all exposed modules and functions can be found [here](https://tarunkoyalwar.github.io/jsproto-docs/).
+API reference of all exposed modules and functions can be found [here](https://projectdiscovery.github.io/js-proto-docs/).
 
 ## Javascript Protocol
 
