--- a/docs/getting-started/running.mdx
+++ b/docs/getting-started/running.mdx
@@ -872,7 +872,7 @@ mapped to the local filesystem to allow access to these files.
 This example runs a Nuclei container against `google.com`, prints the results to JSON and removes the container once it
 has completed:
 ```sh
-docker run --rm projectdiscovery/nuclei -u google.com -json
+docker run --rm projectdiscovery/nuclei -u google.com -jsonl
 ```
 
 ### Using Volumes
